--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -157,34 +157,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "a4ca0466",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4ca0466",
-        "outputId": "b360b790-0ca0-41f5-ef19-357ef6d2a783"
+        "outputId": "f9ebf5af-c12a-41da-dbab-b5af828346c2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Today : 2025-09-11T15:07:01\n",
+            "Today : 2025-10-09T15:17:20\n",
             "Python : 3.12.11 (main, Jun  4 2025, 08:56:18) [GCC 11.4.0]\n",
             "pandas: 2.2.2\n",
-            "Runtime: Linux-6.1.123+-x86_64-with-glibc2.35\n",
+            "Runtime: Linux-6.6.97+-x86_64-with-glibc2.35\n",
             "Total Current Drive Space: 107.72 GB\n",
-            "Free Current Drive Space: 68.73 GB\n",
+            "Free Current Drive Space: 68.31 GB\n",
             "Current Working Directory: /content\n"
           ]
         }
       ],
       "source": [
         "# usually we start with general Python imports\n",
+        "\n",
+        "import sys, platform, os, io, shutil, zipfile, re # system related tasks - this is full syntax we import full modules\n",
+        "# below with from some_module import some sub_object\n",
         "from pathlib import Path # for file and file path related tasks\n",
-        "import sys, platform, os, io, shutil, zipfile, re # system related tasks\n",
         "from datetime import datetime # this is because datetime module has datetime class\n",
         "# otherwise if we used import datetime\n",
         "# we would have to write datetime.datetime for everything\n",
@@ -197,6 +199,7 @@
         "# external - not part of Python installation\n",
         "# on Google Colab those are already installed\n",
         "try:\n",
+        "    # note how in Python after colon we have indentation usually\n",
         "    import pandas as pd # we could fail at import, then next line would not run\n",
         "    print('pandas:', pd.__version__)\n",
         "except ImportError:\n",
@@ -229,6 +232,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# let's also get stats on total, free and used memory"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JuG1ErrXjU-S",
+        "outputId": "b1181bf4-ae94-47c4-af1f-fff9dfc21684"
+      },
+      "id": "JuG1ErrXjU-S",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total Memory: 12.67 GB\n",
+            "Used Memory: 0.87 GB\n",
+            "Free Memory: 8.92 GB\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\n",
@@ -243,13 +272,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# simple decision\n",
-        "is_raining = True\n",
+        "# simple decision we make one of choice only\n",
+        "# just like in https://www.poetryfoundation.org/poems/44272/the-road-not-taken\n",
+        "is_raining = True # new Boolean variable True or False, could be getting data from some source\n",
         "if is_raining:  # note how there is indentation after colon in Python for many operations we have separate paths now\n",
         "    print(\"Bring an umbrella!\")\n",
         "    print(\"Prepare for heavy rain!\")\n",
-        "else:\n",
+        "    # I could do more here for True branch\n",
+        "else: # means is_raining is False - else branch is not required\n",
         "    print(\"No umbrella needed.\")\n",
+        "    # I could do more here for False branch\n",
         "\n",
         "print(\"Back to usual stuff\") # this always runs"
       ],
@@ -258,10 +290,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Day1iqvdsAq",
-        "outputId": "019a6416-275d-4517-afa4-5e83bb012c5f"
+        "outputId": "b125ea44-2f55-417d-97ad-8a92a3dd8987"
       },
       "id": "3Day1iqvdsAq",
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,21 +310,33 @@
       "cell_type": "code",
       "source": [
         "# we can compare something when making a decision\n",
-        "a = 2\n",
-        "b = 3\n",
-        "if a > b:\n",
-        "    print(\"a is greater than b\")\n",
+        "a = 20\n",
+        "b = 20\n",
+        "if a > b: # this check will be first\n",
+        "    print(f\"{a} is greater than {b}\")\n",
         "elif a < b:\n",
-        "    print(\"a is less than b\")\n",
-        "else:\n",
-        "    print(\"a is equal to b\")"
+        "    print(f\"{a} is less than {b}\")\n",
+        "else: # so when other options are exhausted\n",
+        "    print(f\"{a} is equal to {b}\")"
       ],
       "metadata": {
-        "id": "AQ5S9InXdzbI"
+        "id": "AQ5S9InXdzbI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dad0d008-6d80-4461-ce9a-8f9e5239a09d"
       },
       "id": "AQ5S9InXdzbI",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20 is equal to 20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -330,19 +374,20 @@
       "cell_type": "code",
       "source": [
         "my_name = \"Valdis\"\n",
+        "# if you think about it a string is a collection of letters / small strings\n",
         "# let's loop over characters one item at a time\n",
-        "for char in my_name:\n",
+        "for char in my_name: # char is just a variable name I made up\n",
         "    print(char)"
       ],
       "metadata": {
         "id": "qsGAL26Aee5B",
-        "outputId": "2fa41f0a-71e5-482f-d991-8dc128c7fb28",
+        "outputId": "0ecd72f0-283a-47f8-a495-62c675da80d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "qsGAL26Aee5B",
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,32 +410,51 @@
         "shopping_list = [\"apples\", \"bananas\", \"milk\", \"bread\"]\n",
         "for item in shopping_list: # item is a new variable that changes each time we iterate/loop over collection\n",
         "    print(f\"Need to buy {item}\")\n",
+        "    # still inside loop\n",
+        "\n",
+        "# outside loop\n",
         "\n",
         "print(\"All done with shopping\")"
       ],
       "metadata": {
-        "id": "_E-E4IYTepWT"
+        "id": "_E-E4IYTepWT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cc20f8c-42f2-4e30-c7d1-601bd93b424c"
       },
       "id": "_E-E4IYTepWT",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Need to buy apples\n",
+            "Need to buy bananas\n",
+            "Need to buy milk\n",
+            "Need to buy bread\n",
+            "All done with shopping\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# we can also iterate over some range\n",
-        "for num in range(5):\n",
+        "for num in range(5): # instead of num I could use x or i or whatever\n",
         "    print(f\"The number currently processed is {num}\")"
       ],
       "metadata": {
         "id": "hqDG6NPSe5e7",
-        "outputId": "27a83db1-f9b7-4cd0-e520-db1d3c12897c",
+        "outputId": "a2152e2e-1752-4998-fc32-f6a36e2fb5c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "hqDG6NPSe5e7",
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,6 +465,42 @@
             "The number currently processed is 2\n",
             "The number currently processed is 3\n",
             "The number currently processed is 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if you need custom range let's say 100 to 120 with 2 step\n",
+        "for num in range(100, 121, 2):\n",
+        "    print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fORslUD8m8gD",
+        "outputId": "d9153a62-7651-4453-a11b-c21afa7a3eb4"
+      },
+      "id": "fORslUD8m8gD",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "102\n",
+            "104\n",
+            "106\n",
+            "108\n",
+            "110\n",
+            "112\n",
+            "114\n",
+            "116\n",
+            "118\n",
+            "120\n"
           ]
         }
       ]
@@ -454,7 +554,7 @@
         "id": "2or7MhZzcVKP"
       },
       "id": "2or7MhZzcVKP",
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -468,15 +568,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "INRc85SzcjU_",
-        "outputId": "66cfca1c-b340-4281-f9b2-fbe901395f2a"
+        "outputId": "d7e967f9-080d-43b3-cc2e-b5824c6ccb48"
       },
       "id": "INRc85SzcjU_",
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Hi there!\n",
+            "Let's do some work!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for n in range(3):\n",
+        "  simple_greet()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kcNiz2rCoTKU",
+        "outputId": "34fbdf05-edd2-41fc-d8ee-8fcef3d75832"
+      },
+      "id": "kcNiz2rCoTKU",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi there!\n",
+            "Let's do some work!\n",
+            "Hi there!\n",
+            "Let's do some work!\n",
             "Hi there!\n",
             "Let's do some work!\n"
           ]
@@ -498,7 +628,7 @@
         "id": "KQgpD2ttcnZM"
       },
       "id": "KQgpD2ttcnZM",
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -512,10 +642,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Syz45MHc9Ux",
-        "outputId": "6c570483-cfc2-48a7-c0fc-d87fdbe68d30"
+        "outputId": "981b053b-f5fc-432a-ba57-25eb6c336111"
       },
       "id": "7Syz45MHc9Ux",
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +658,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "ede_greeting = create_greeting(\"Ede\")\n",
+        "print(ede_greeting)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VFUUdzyuo5DS",
+        "outputId": "03250161-3488-4225-c989-39cfcdcd999b"
+      },
+      "id": "VFUUdzyuo5DS",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a custom greeting for Ede\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
       "id": "d94c3040",
       "metadata": {
         "id": "d94c3040"
@@ -553,14 +708,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "ed0a8142",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ed0a8142",
-        "outputId": "33001176-6706-4d2b-834e-1687ed8404ff"
+        "outputId": "46ff9757-8568-4354-cac7-0700937d0d52"
       },
       "outputs": [
         {
@@ -579,14 +734,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "DGWKzOyzG-BT",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGWKzOyzG-BT",
-        "outputId": "695d5f72-9d72-409a-a538-b2402cfc516e"
+        "outputId": "5dae50fe-2ef0-4f30-bb5c-cdbfecddd5eb"
       },
       "outputs": [
         {
@@ -625,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "ad7e7b4b",
       "metadata": {
         "id": "ad7e7b4b"
@@ -644,14 +799,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "9d4c906f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9d4c906f",
-        "outputId": "e1541f02-5b0d-41ce-8ed5-a088e460c8d9"
+        "outputId": "7918fee2-0d0e-432c-d1b7-a0f7a004a4c4"
       },
       "outputs": [
         {
@@ -677,14 +832,27 @@
       "cell_type": "code",
       "source": [
         "# we can still get error if we try to add str with integer which is not allowed in Pythong...\n",
-        "# print(add(\"nevar\", 66))"
+        "# print(add(\"nevar\", 66))\n",
+        "print(add(\"nevar\", str(66)))  # i type-cast 66 to string"
       ],
       "metadata": {
-        "id": "NpusjikR8nnq"
+        "id": "NpusjikR8nnq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a291cec-c82f-457a-e23d-dacd5f27f584"
       },
       "id": "NpusjikR8nnq",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nevar66\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -704,10 +872,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tv8D_7NNRRvh",
-        "outputId": "5c0e4b57-0e1a-44ee-8ec5-297ca6ab75b2"
+        "outputId": "c7d720b5-126d-46e0-f1d9-ef9c58c1ac53"
       },
       "id": "tv8D_7NNRRvh",
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -15772,8 +15940,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "venv",
