--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -164,6 +164,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "e135d259"
+      },
+      "source": [
+        "### Additional Relevant Terms\n",
+        "\n",
+        "* **Library/Package**: A collection of modules (pre-written code) that provides specific functionalities. Pandas and NumPy are examples of Python libraries.\n",
+        "* **Module**: A single Python file containing code (functions, classes, variables).\n",
+        "* **Function**: A block of organized, reusable code that performs a specific task. You've already used built-in functions like `print()` and pandas functions like `read_csv()`.\n",
+        "* **Method**: Similar to a function, but associated with an object (like a DataFrame). `df.head()` and `df.describe()` are examples of methods.\n",
+        "* **Argument/Parameter**: Values passed to a function or method to modify its behavior. In `pd.read_csv(url)`, `url` is an argument.\n",
+        "* **Syntax**: The set of rules that define how to write code in a particular programming language.\n",
+        "* **Error/Exception**: Problems that occur during the execution of a program that disrupt the normal flow. You might encounter `SyntaxError`, `NameError`, or `TypeError` when coding.\n",
+        "* **Debugging**: The process of finding and fixing errors in code.\n",
+        "* **Data Structure**: A way of organizing and storing data in a computer so that it can be accessed and modified efficiently. Lists, dictionaries, and DataFrames are examples of data structures.\n",
+        "* **API (Application Programming Interface)**: A set of definitions and protocols for building and interacting with software applications. You might use APIs to collect data from online sources.\n",
+        "* **Algorithm**: A set of step-by-step instructions or rules designed to perform a specific task or solve a problem.\n",
+        "* **Version Control**: A system (like Git) that records changes to a file or set of files over time so that you can recall specific versions later. This is crucial for collaboration and tracking your work."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "bss5Sut8u0O3",
         "vscode": {
           "languageId": "markdown"
@@ -432,6 +454,7 @@
         "* Āboli\n",
         "* Banāni\n",
         "* Burkāni\n",
+        "* **Kartupeļi**\n",
         "\n",
         "#### Dzērieni\n",
         "\n",
@@ -443,6 +466,37 @@
         "#### Resursi\n",
         "\n",
         "* [Veselīgu Ēdienu Lapa](https://en.wikipedia.org/wiki/Healthy_diet)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## New section on drinks\n",
+        "\n",
+        "Some text"
+      ],
+      "metadata": {
+        "id": "XfVCL3Z_7wXc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "56796995"
+      },
+      "source": [
+        "## Healthy Drinks\n",
+        "\n",
+        "Choosing healthy drinks is an important part of a balanced diet. While water is always the best choice for hydration, other options like unsweetened tea, black coffee, and certain types of milk or milk alternatives can also contribute to your overall health. These beverages can provide essential nutrients and antioxidants without the added sugars and artificial ingredients found in many processed drinks. Making mindful choices about your beverages can have a significant positive impact on your well-being.\n",
+        "\n",
+        "#### Healthy Drink Options\n",
+        "\n",
+        "* Water\n",
+        "* Unsweetened tea (green, black, herbal)\n",
+        "* Black coffee (in moderation)\n",
+        "* Milk (dairy or unsweetened plant-based)\n",
+        "* 100% fruit juice (in moderation due to sugar content)\n",
+        "* Vegetable juice"
       ]
     },
     {
@@ -494,36 +548,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4NZHtla7QpSM",
-        "outputId": "1febac57-4080-4c55-8b53-45fb2c1012b3"
+        "outputId": "c7ec7186-4954-4093-8cc8-514fb23d3a73"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello Python! My First Code cell Man pirmā koda rindiņa droši vien ne pēdejā :) \n"
+            "Labvakar Python! Mana pirmā koda rindiņa droši vien ne pēdejā :) \n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello Python! My First Code cell Man pirmā koda rindiņa droši vien ne pēdejā :) \")"
+        "print(\"Labvakar Python! Mana pirmā koda rindiņa droši vien ne pēdejā :) \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-wXMZWDBu0PS",
-        "outputId": "a368a0b2-d284-4df9-a625-0e33bc7e0fe5"
+        "outputId": "d9891e26-c6f6-48b7-bdc6-41934913f21b"
       },
       "outputs": [
         {
@@ -569,9 +623,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GAYDonZEqUtH",
-        "outputId": "c1094893-ed5a-4150-cc3e-99285c4ac619"
+        "outputId": "1384799c-0087-4159-db28-3256350749fd"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,13 +639,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SRnNd664Jiom",
-        "outputId": "0009aac8-656e-4fd4-d09d-70ca357a2786"
+        "outputId": "457b84c0-9587-4c94-e9b9-a2d56ac2a914"
       },
       "outputs": [
         {
@@ -611,13 +665,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAMky2IGUDFE",
-        "outputId": "ca609de3-7c22-4027-c042-1f1d5a977231"
+        "outputId": "1dd5e8d4-ea7d-4433-c8dc-155f774f93b5"
       },
       "outputs": [
         {
@@ -642,6 +696,29 @@
         "I'm not that innocent\"\"\")\n",
         "# we see a new way of adding multi line strings we use \"\"\" to start multi line\n",
         "# and then we use \"\"\" to finish"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"What am I doing? I am fixing errors!\") # Added a closing double quote and corrected plint to print"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7aQbtJOP_O36",
+        "outputId": "3ed44ea4-efe4-4dfa-c5e2-d9150ba7cd61"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What am I doing? I am fixing errors!\n"
+          ]
+        }
       ]
     },
     {
@@ -710,13 +787,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vTHfoB-Vu0Pe",
-        "outputId": "99f3b731-1d4c-4d0c-ff7c-4c1e30bf5d8f"
+        "outputId": "c65704d9-2b73-4b52-b486-88bd2d8ef71e"
       },
       "outputs": [
         {
@@ -764,9 +841,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7G2hV70kszQM",
-        "outputId": "68ec770d-8828-4ad3-ad2b-662a87f2b9db"
+        "outputId": "bd854aec-9c58-474c-cf41-e4a9888a8da5"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,15 +860,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wN1BSTSHV1q5",
-        "outputId": "6547db59-d7e5-4492-ca39-03e5fca16451"
+        "outputId": "41371172-3f39-47c5-8476-a45999679e82"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "57\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -804,6 +888,7 @@
         }
       ],
       "source": [
+        "print(50+7) # this will print on output because I use print\n",
         "5+2 # this row will not show because it is not last and we did  not print it\n",
         "10+20 # I do not need to write print for last row of a cell it will be output below"
       ]
@@ -818,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m54xRzI-g0No",
-        "outputId": "3f7f09c1-b920-49a3-d309-5cca0e5a606f"
+        "outputId": "50b3a11b-cb04-4ca7-c034-5c191d14baff"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,13 +921,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7aUyH7AWDUv",
-        "outputId": "d4cd6264-8f1a-438d-d76a-5822241b6f46"
+        "outputId": "a6846507-1fab-4c48-ed33-4a866418f0c9"
       },
       "outputs": [
         {
@@ -869,6 +954,23 @@
         "print(\"10**100 (power):\", 10**100) # ** means power so 10 to the power of 100\n",
         "# sooo Python has built in BIGNUM support, so any size numbers will work"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 10 to the power of 100\n",
+        "\n",
+        "The number 10 to the power of 100 is called a googol. It was named in 1920 by Milton Sirotta, the nine-year-old nephew of American mathematician Edward Kasner. Kasner popularized the term in his 1940 book \"Mathematics and the Imagination.\" The name was created to be a very large number, but not infinitely large, to help people understand the difference between a number that is incredibly large and infinity.\n",
+        "\n",
+        "Here are some links where you can learn more about the googol:\n",
+        "\n",
+        "* Wikipedia: Googol\n",
+        "* Wolfram MathWorld: Googol\n",
+        "* Scientific American: What is a googol?"
+      ],
+      "metadata": {
+        "id": "QqB0Oq9JCUQi"
+      }
     },
     {
       "cell_type": "markdown",
@@ -924,13 +1026,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pxnir_Umu0Pn",
-        "outputId": "10b6a0b4-2411-43de-b338-91a925d4adac"
+        "outputId": "99212443-e8dd-48cf-bee3-9854791cdd2a"
       },
       "outputs": [
         {
@@ -950,20 +1052,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NsZC-3vGu0Pr",
-        "outputId": "fd0ad7fd-8444-4f64-eea2-1a2961cc48d3"
+        "outputId": "b39bd723-142a-4ee1-e274-73762b6096c7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Future will be 2600.\n"
+            "Future will be 2100.\n"
           ]
         }
       ],
@@ -1071,7 +1173,7 @@
         },
         "outputId": "748b5948-ddea-4496-9b3e-556d7e67bb22"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1228,7 @@
         },
         "outputId": "019b9bdc-1d8f-4499-c6f9-87e3ebe5531c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1175,7 +1277,7 @@
         },
         "outputId": "827065e8-5b75-462f-a98b-e3a43ad313c4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1210,7 +1312,7 @@
         "id": "i3qruDNWt-Ru",
         "outputId": "a2338b89-8db9-45ce-e306-452a279036a1"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1376,7 +1478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1419,7 +1521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1462,7 +1564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1494,7 +1596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1535,7 +1637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1932,7 +2034,7 @@
           "height": 192
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2301,7 +2403,7 @@
           "height": 258
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2685,7 +2787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2746,7 +2848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2941,7 +3043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3307,7 +3409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3636,7 +3738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3666,7 +3768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3786,7 +3888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4136,7 +4238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4196,7 +4298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4504,7 +4606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5464,7 +5566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5860,7 +5962,7 @@
           "height": 258
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6224,7 +6326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6634,7 +6736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6959,7 +7061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -7003,7 +7105,7 @@
           "height": 17
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7170,7 +7272,7 @@
           "height": 330
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7572,7 +7674,7 @@
           "height": 330
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7981,7 +8083,7 @@
           "height": 380
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8319,7 +8421,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8345,7 +8447,7 @@
           "height": 17
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
